--- a/package.json
+++ b/package.json
@@ -6,19 +6,29 @@
     "start": "nodemon bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.761.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-fileupload": "^1.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "lowdb": "^1.0.0",
     "md5": "^2.3.0",
-    "mongoose": "^5.10.6",
-    "morgan": "~1.9.1",
+    "mongoose": "^5.10.7",
+    "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "shortid": "^2.2.15"
+    "multer-gridfs-storage": "^4.2.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "shortid": "^2.2.15",
+    "util": "^0.12.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
